k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - local.example.com
    secretName: tls-secret
  rules:
  - host: local.example.com
    http:
      paths:
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: devops-info-service
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: devops-info-service
            port:
              number: 80
